# axdigi

./: .clinerules  .gitignore  CMakeLists.txt  Makefile  README.md  sample.conf
include/: alias.h  connection.h  deduplicator.h  digipeater.h  options.h  packet.h
src/: alias.c  connection.c  deduplicator.c  digipeater.c  main.c  options.c  options_args.c  options_file.c  packet.c
systemd/: axdigi.service
test/: main_test.c  test.c  test.h  test_alias.h  test_deduplicator.h  test_digipeater.h  test_packet.h
